# Sota-rag-eval

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.web  README.md  SVELTEKIT_REFACTOR_PLAN.md  azure.yaml  eslint.config.js  eval_questions.csv  package-lock.json  package.json  playwright.config.ts  retrieve-live-cross-repair.yaml  retrieve-live-cross.db  retrieve-live-cross.yaml  retrieve.example.yaml  test_eval_export.csv  vite.config.ts
retrieve-core/: ARCHITECTURE.md  Dockerfile  Dockerfile.api  Dockerfile.graphrag-job  Dockerfile.graphrag-seed  Dockerfile.proxy  e2e_live_results.json  pyproject.toml  retrieve.example.yaml  test_LIVE_cli_e2e.py  test_live_e2e.py  web_e2e_live_results.json
retrieve-core/corpus/: addendum_100_a_-_confidentiality_and_misuse_addendum_100_a_-_confidentiality_and_misuse.md  addendum_100_b_-_aac_safeguarding_and_disclosure_addendum_100_b_-_aac_safeguarding_and_disclosure.md  addendum_100_c_-_language_list_addendum_100_c_-_language_list.md  addendum_101_a_-_fee_agent_and_nfap_application_date_determination_addendum_101_a_-_fee_agent_and_nfap_application_date_determination.md  addendum_103_a_-_records_reference_request_addendum_103_a_-_records_reference_request.md  addendum_107_a_-_reserved_addendum_107_a_-_reserved.md  addendum_109_a_-_reserved_addendum_109_a_-_reserved.md  addendum_109_b_-_report_of_change_cano_template_and_report_of_change_guide_addendum_109_b_-_report_of_change_cano_template_and_report_of_change_guide.md  addendum_109_c_-_fair_hearing_request_cano_addendum_109_c_-_fair_hearing_request_cano.md  addendum_109_d_-_prehearing_conference_cano_addendum_109_d_-_prehearing_conference_cano.md  addendum_109_e_-_fraud_referral_and_findings_cano_template_addendum_109_e_-_fraud_referral_and_findings_cano_template.md  addendum_109_f_-_dpa_acronyms_addendum_109_f_-_dpa_acronyms.md  addendum_118_a_-_voter_registration_application_transmittal_form_addendum_118_a_-_voter_registration_application_transmittal_form.md  addendum_118_b_-_returned_mail_guide_addendum_118_b_-_returned_mail_guide.md  transmittal_2008-01_transmittal_2008-01.md  transmittal_2009-01_transmittal_2009-01.md  transmittal_2009-02_transmittal_2009-02.md  transmittal_2009-03_transmittal_2009-03.md  transmittal_2010-01_transmittal_2010-01.md  transmittal_2010-02_transmittal_2010-02.md  transmittal_2011-01_transmittal_2011-01.md  transmittal_2011-02_transmittal_2011-02.md  transmittal_2012-01_transmittal_2012-01.md  transmittal_2012-02_transmittal_2012-02.md  transmittal_2013-01_transmittal_2013-01.md  transmittal_2013-02_transmittal_2013-02.md  transmittal_2013-03_transmittal_2013-03.md  transmittal_2014-01_transmittal_2014-01.md  transmittal_2014-02_transmittal_2014-02.md  transmittal_2015-01_transmittal_2015-01.md  transmittal_2015-02_transmittal_2015-02.md  transmittal_2015-03_transmittal_2015-03.md  transmittal_2016-01_transmittal_2016-01.md  transmittal_2016-02_transmittal_2016-02.md  transmittal_2016-03_transmittal_2016-03.md  transmittal_2017-01_transmittal_2017-01.md  transmittal_2017-02_transmittal_2017-02.md  transmittal_2017-03_transmittal_2017-03.md  transmittal_2018-01_transmittal_2018-01.md  transmittal_2018-02_transmittal_2018-02.md  (+21 more)
retrieve-core/docs/: sota-paths.md
retrieve-core/e2e_corpus/: addendum_100_a_-_confidentiality_and_misuse_addendum_100_a_-_confidentiality_and_misuse.md  (+60 more)
(+4252 files in other folders)
